Funcionalidad: Validaciones para la pantalla de vehiculo